-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.0-rc1, Qt Creator 4.6.0
-
None
When editing a header file, at some point the following message starts to appear at the top of the editor window:
Warning: The code model could not parse an included file, which might lead to slow or incorrect code completion and highlighting, for example.
0:0: error: file 'somefile.hh' from the precompiled header has been overridden
This error has never happened to me in 4.5.0 or earlier versions. Not sure how to reproduce this exactly, but this happens quite frequently.
| For Gerrit Dashboard: QTCREATORBUG-20125 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 225845,3 | Clang: Suppress diagnostic "file 'x' from the precompiled header has been overridden" | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |