Clang: Suppress diagnostic "file 'x' from the precompiled header has been overridden"

...since it's not critical, only annoying to see.

If this diagnostic occurs, changes in a non-project header will not be
reflected in the main file. That's not a common case.

Task-number: QTCREATORBUG-20125
Change-Id: Ic7b65506cdd6bc1c163050497d6f7c106a48d517
Reviewed-by: Ivan Donchevskii <ivan.donchevskii@qt.io>